# crabdrop

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
apps/client/: index.html  package.json  vercel.json  vite.config.ts
apps/client/src/: App.tsx  index.css  main.tsx  types.ts
apps/client/src/components/: ProgressBuffer.tsx  ProgressList.tsx  ResultsList.tsx  SelectionBuffer.tsx  SettingsPanel.tsx  UploadZone.tsx  mode-toggle.tsx  theme-provider.tsx
apps/client/src/components/ui/: spotlight-new.tsx
apps/client/src/lib/: constants.ts  utils.ts
apps/server/: .dockerignore  .env.example  Cargo.toml  Dockerfile
apps/server/migration/src/: m20220101_000001_create_table.rs
apps/server/src/: compression.rs  config.rs  cron.rs  error.rs  main.rs  state.rs  storage.rs
apps/server/src/entities/: images.rs  mod.rs  prelude.rs
apps/server/src/routes/: files.rs  health.rs  mod.rs  progress.rs  upload.rs
